--- a/index.html
+++ b/index.html
@@ -83,14 +83,12 @@
                     <div class="row justify-content-between">
                         <div class="col-md-8">
                             <div class="hero-bottom-left">
-
-
-                                <p><span>LIVE</span> :
-                                    <marquee direction="up" scrollmount="2" scrolldelay="300">2017 Preview Storyboard
-                                    </marquee>
-                                    <marquee direction="up" scrollmount="4" scrolldelay="400">2016 Offseason Preview
-                                        Storyboard</marquee>
-                                </p>
+                                <marquee direction="up" scrollmount="4" scrolldelay="200">
+                                    <p><span>LIVE :</span> 2016
+                                        Offseason Preview
+                                        Storyboard
+                                    </p>
+                                </marquee>
 
                             </div>
                         </div>
@@ -103,6 +101,96 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="fixer-main-area">
+        <div class="container-fluid g-0">
+            <div class="fixer-slider-main-wrap owl-carousel">
+                <div class="fixer-slider-wrap">
+                    <a href="#">
+                        <div class="fixer-single-item">
+                            <div class="match-date">
+                                <p>Kensington, <span>Sep 25, 2019</span></p>
+                            </div>
+                            <div class="team-wrap">
+                                <div class="team-left">
+                                    <img src="assets/img/logo-05-150x150.png" alt="">
+                                    <p>Dinosaur</p>
+                                    <h2>1</h2>
+                                </div>
+                                <div class="team-right">
+                                    <img src="assets/img/logo-06-150x150.png" alt="">
+                                    <p>Rams</p>
+                                    <h2>3 <span class="team-win">WIN</span></h2>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="fixer-slider-wrap">
+                    <a href="#">
+                        <div class="fixer-single-item">
+                            <div class="match-date">
+                                <p>Kensington, <span>Sep 25, 2019</span></p>
+                            </div>
+                            <div class="team-wrap">
+                                <div class="team-left">
+                                    <img src="assets/img/logo-05-150x150.png" alt="">
+                                    <p>Dinosaur</p>
+                                    <h2>1</h2>
+                                </div>
+                                <div class="team-right">
+                                    <img src="assets/img/logo-06-150x150.png" alt="">
+                                    <p>Rams</p>
+                                    <h2>3 <span class="team-win">WIN</span></h2>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="fixer-slider-wrap">
+                    <a href="#">
+                        <div class="fixer-single-item">
+                            <div class="match-date">
+                                <p>Kensington, <span>Sep 25, 2019</span></p>
+                            </div>
+                            <div class="team-wrap">
+                                <div class="team-left">
+                                    <img src="assets/img/logo-05-150x150.png" alt="">
+                                    <p>Dinosaur</p>
+                                    <h2>1</h2>
+                                </div>
+                                <div class="team-right">
+                                    <img src="assets/img/logo-06-150x150.png" alt="">
+                                    <p>Rams</p>
+                                    <h2>3 <span class="team-win">WIN</span></h2>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="fixer-slider-wrap">
+                    <a href="#">
+                        <div class="fixer-single-item">
+                            <div class="match-date">
+                                <p>Kensington, <span>Sep 25, 2019</span></p>
+                            </div>
+                            <div class="team-wrap">
+                                <div class="team-left">
+                                    <img src="assets/img/logo-05-150x150.png" alt="">
+                                    <p>Dinosaur</p>
+                                    <h2>1</h2>
+                                </div>
+                                <div class="team-right">
+                                    <img src="assets/img/logo-06-150x150.png" alt="">
+                                    <p>Rams</p>
+                                    <h2>3 <span class="team-win">WIN</span></h2>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
