--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 </head>
 
 <body>
+
+    <!--Preloader Start-->
+    <div id="preloader">
+        <div id="status">&nbsp;</div>
+    </div>
+    <!--Preloader End-->
     <header class="header__main__wrap">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
