--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
-
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" />
+    <link rel="stylesheet" href="assets/css/video-popup.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -1095,9 +1097,175 @@
             </div>
         </div>
     </section>
+
+
+    <section class="awards-main-area">
+        <div class="container">
+            <div class="award-title">
+                <h2>AWARDS</h2>
+            </div>
+            <div class="awards-slider-main-wrap">
+                <div class="awards-slider owl-carousel">
+                    <!-- single slider  -->
+                    <div class="awards-single-slider">
+                        <a href="#">
+                            <div class="card">
+                                <div class="awards-image-box">
+                                    <img src="assets/img/one_.png" class="card-img-top" alt="helmet">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title"> 2019 World coup champion</h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- single slider  -->
+                    <div class="awards-single-slider">
+                        <a href="#">
+                            <div class="card">
+                                <div class="awards-image-box">
+                                    <img src="assets/img/two_.png" class="card-img-top" alt="helmet">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title"> 2016 World coup champion</h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- single slider  -->
+                    <div class="awards-single-slider">
+                        <a href="#">
+                            <div class="card">
+                                <div class="awards-image-box">
+                                    <img src="assets/img/one_.png" class="card-img-top" alt="helmet">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title"> 2017 World coup champion</h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- single slider  -->
+                    <div class="awards-single-slider">
+                        <a href="#">
+                            <div class="card">
+                                <div class="awards-image-box">
+                                    <img src="assets/img/two_.png" class="card-img-top" alt="helmet">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title"> 2015 World coup champion</h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- single slider  -->
+                    <div class="awards-single-slider">
+                        <a href="#">
+                            <div class="card">
+                                <div class="awards-image-box">
+                                    <img src="assets/img/one_.png" class="card-img-top" alt="helmet">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title"> 2018 World coup champion</h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- single slider  -->
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="brand-main-area">
+        <div class="container">
+            <div class="brand-image-wrap">
+                <div class="brand-image-inner-wrap owl-carousel">
+                    <div class="single-brand">
+                        <img src="assets/img/edge-160x60.png" alt="">
+                    </div>
+                    <div class="single-brand">
+                        <img src="assets/img/aramiz-160x60.png" alt="">
+                    </div>
+
+                    <div class="single-brand">
+                        <img src="assets/img/kphone-160x60.png" alt="">
+                    </div>
+                    <div class="single-brand">
+                        <img src="assets/img/tvc-160x60.png" alt="">
+                    </div>
+                    <div class="single-brand">
+                        <img src="assets/img/arcada-160x60.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="video-popup-main-wrap">
+        <div class="container">
+            <div class="video-popup-title">
+                <h2>WATCH OUR VIDEOS & LIVE STREAMS ON YOUTUBE
+                </h2>
+            </div>
+            <div class="video-popup-inner-wrap owl-carousel">
+                <!-- single popup  -->
+                <div class="popup-single-item">
+                    <div class="video_container">
+                        <a href="https://www.youtube.com/watch?v=oNxCporOofo" class="video_model">
+                            <img src="https://cdn.pixabay.com/photo/2016/10/27/22/53/heart-1776746_960_720.jpg">
+                            <img src="http://pluspng.com/img-png/play-button-png-projects-330.png">
+                        </a>
+                    </div>
+                </div>
+                <!-- single popup  -->
+                <div class="popup-single-item">
+                    <div class="video_container">
+                        <a href="https://www.youtube.com/watch?v=oNxCporOofo" class="video_model">
+                            <img src="https://cdn.pixabay.com/photo/2016/10/27/22/53/heart-1776746_960_720.jpg">
+                            <img src="http://pluspng.com/img-png/play-button-png-projects-330.png">
+                        </a>
+                    </div>
+                </div>
+                <!-- single popup  -->
+                <div class="popup-single-item">
+                    <div class="video_container">
+                        <a href="https://www.youtube.com/watch?v=oNxCporOofo" class="video_model">
+                            <img src="https://cdn.pixabay.com/photo/2016/10/27/22/53/heart-1776746_960_720.jpg">
+                            <img src="http://pluspng.com/img-png/play-button-png-projects-330.png">
+                        </a>
+                    </div>
+                </div>
+                <!-- single popup  -->
+                <div class="popup-single-item">
+                    <div class="video_container">
+                        <a href="https://www.youtube.com/watch?v=oNxCporOofo" class="video_model">
+                            <img src="https://cdn.pixabay.com/photo/2016/10/27/22/53/heart-1776746_960_720.jpg">
+                            <img src="http://pluspng.com/img-png/play-button-png-projects-330.png">
+                        </a>
+                    </div>
+                </div>
+                <!-- single popup  -->
+                <div class="popup-single-item">
+                    <div class="video_container">
+                        <a href="https://www.youtube.com/watch?v=oNxCporOofo" class="video_model">
+                            <img src="https://cdn.pixabay.com/photo/2016/10/27/22/53/heart-1776746_960_720.jpg">
+                            <img src="http://pluspng.com/img-png/play-button-png-projects-330.png">
+                        </a>
+                    </div>
+                </div>
+                <!-- single popup  -->
+            </div>
+            <div class="hero-button-area">
+                <a href="#">WATCH VIDEO</a>
+            </div>
+        </div>
+    </section>
+
+
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
