--- a/index.html
+++ b/index.html
@@ -1259,8 +1259,65 @@
             </div>
         </div>
     </section>
+    <section class="post-twitter-main-area">
+        <div class="container">
+            <div class="twitter-inner-wrap">
+                <div class="twitter-title">
+                    <h1>TWITTER</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="join-us-main-area">
+        <div class="container">
+            <div class="join-us-inner-wrap">
+                <h2>JOIN OUR FAN CLUB AND <br>
+                    GET FREE TICKET</h2>
+                <div class="hero-button-area">
+                    <a href="#">JOIN US</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer-main-area">
+        <div class="container">
+            <div class="footer-inner-wrap">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="footer-item-left">
+                            <h3>ABOUT</h3>
+                            <p>Bicycle rights heirloom poutine twee distillery kale chips. Thundercats pok pok seitan
+                                waistcoat whatever yr. Squid cornhole iPhone umami thundercats, shabby chic pinterest
+                                crucifix kogi irony. Chambray lyft flannel pok pok.
 
-
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="footer-item-middle">
+                            <img src="assets/img/logo.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="footer-item-right">
+                            <h3>CONTACT INFO</h3>
+                            <p>Call-center: <span>1 (323) 938-5798</span></p>
+                            <p>Sales: <span>1 (888) 637-7262</span></p>
+                            <p>Email: <span>info@styleixthemes.com</span></p>
+                            <p class="footer-right-bottom">
+                                1840 E Garvey Avenue Street
+                                West Covina, CA 91791, U.S.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <p>© 2020 <a href="#">StylemixThemes</a> | Trademarks and brands are the property of their respective
+                owners.</p>
+        </div>
+    </footer>
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
