--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" />
     <link rel="stylesheet" href="assets/css/video-popup.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
     <header class="header__main__wrap">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+                <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +50,7 @@
                             <a class="nav-link" href="#">NEWS</a>
                         </li>
                         <!-- site logo  -->
-                        <li class="nav-item">
+                        <li class="nav-item responsive-link-hide">
                             <a class="nav-link desktop__site_logo" href="#"><img src="assets/img/logo.png" alt=""></a>
                         </li>
                         <!-- site logo  -->
